   - Snap grids
     * Objects placed should snap to the nearest intersection of the grid
	 * Objects should snap by their collision mask
	 * Grids' cell global widths and heights should be adjustable (aka a 16x16 pixel/cell grid should be able to become a 32x32 pixel/cell grid)
     * Cartesian (standard up-down left-right)
	 * Isometric (diagonal, lines with slopes of 1/2 and -1/2)
	 * Unordered (no snap grid)
   - Object library
     * Library of preloaded object/tile definitions (objects and tiles may have separate libraries)
   - Ability to delete objects already placed
   - Ability to manually adjust some attributes of individual objects (e.g. x and y values)
   - Export to a file (programming routines to read from the file should come later)
 * Map loading routine
 * Fix the sprite-sliding glitch (walking in any direction for a second stops the animation, making the sprite look like it's sliding)
 * Fix the pausing of the convobox

14/09/2012
 * Renamed Tile to TileEntity
 * Consolidated sprite functions into Sprite
 * Fixed bugs related to Sprite
 * Created MapEditor
 * Made MapEditor's layout (vibrantly colored, no content)
 
TODO:
 * Add support code for MapEditor
 * Make convobox
 
15/09/2012
 * Made convobox
 * Added MapEditor controls
 * Added code for MapEditor grid and controls
 * Fixed Path problem using File.pathSeparator to work for path formats irrespective of Operating system
 * Created more cubes in different colors
 * Modified playground to implement color cubes
 * Added the Convobox class
 * Refined the Convobox element to make it work.
 * Font in convobox is now customizable.
 * Cleaned up convobox code/fixed bugs.
 * Made Octave an applet such that it works if executed standalone or through browser
 * Changed Image loaders to work with limited permissions
 * Inherited from JApplet , made init()

TODO:
 * Add map building code to MapEditor
 * Preload all entity/tile types
 * Create .map file format