@@ -60,21 +60,21 @@ public class Map extends JPanel{
 		add(player);
     	int s=13;
     	int wh=18;
-    	add(new Block("bluebox.png",240-18,0));
-		add(new Block("greenbox.png",206,200));
+    	add(new Box("bluebox.png",240-18,0));
+		add(new Box("greenbox.png",206,200));
     	for(int i=0;i<s;++i){
-    		add(new Block("bluebox.png",240-wh-i*16,i*8));
-    		add(new Block("whitebox.png",240-wh+i*16,i*8));
+    		add(new Box("bluebox.png",240-wh-i*16,i*8));
+    		add(new Box("whitebox.png",240-wh+i*16,i*8));
     	}
     	for(int i=1;i<s;++i){
-    		add(new Block("redbox.png",i*16-3,8*s+i*8-8));
-    		add(new Block("greenbox.png",480-i*16-65,8*s+i*8-8));
+    		add(new Box("redbox.png",i*16-3,8*s+i*8-8));
+    		add(new Box("greenbox.png",480-i*16-65,8*s+i*8-8));
     	}
-    	add(new MapEntity(new Sprite("tree1.png"),"tree1_mask.png",21,55),480/2-61,270/2-81).solid=true;
-    	add(new MapEntity(new Sprite("rock1.png"),"rock1_mask.png",0,14),240-33,16).solid=true;
+    	add(new Block(new Sprite("tree1.png"),new Mask("tree1_mask.png"),21,55),480/2-61,270/2-81);
+    	add(new Block(new Sprite("rock1.png"),new Mask("rock1_mask.png"),0,14),240-33,16);
     	add(new TileEntity("rug.png"),60,270/2-17);
     	add(new TileEntity("helloworld.png"){
-    		void collide(MapEntity other){
+    		void collide(Collidable other){
     			if(other==player){
     				System.out.println("Hello world!");
     			}
@@ -101,12 +101,16 @@ public class Map extends JPanel{
 		for(int i=0;i<entities.size();i++){
 			o1=entities.get(i);
 			o1.step();
-			//Check for collisions
-			for(int j=i+1;j<entities.size();j++){
-				o2=entities.get(j);
-				if(CollisionEngine.pixel_collision(o1,o2)){
-					o1.collide(o2);
-					o2.collide(o1);
+			if(o1 instanceof Collidable){
+				//Check for collisions
+				for(int j=i+1;j<entities.size();j++){
+					o2=entities.get(j);
+					if(o2 instanceof Collidable){
+						if(CollisionEngine.pixel_collision((Collidable)o1,(Collidable)o2)){
+							((Collidable)o1).collide((Collidable)o2);
+							((Collidable)o2).collide((Collidable)o1);
+						}
+					}
 				}
 			}
 		}
